# whistler_weather_forecast

./: .env.example  .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: alert_service.py  config.py  database.py  main.py  prediction.py
backend/app/models/: __init__.py  alert.py  evaluation_metric.py  forecast.py  location.py  model_prediction.py  observation.py  resort_snapshot.py  station.py  training_label.py
backend/app/routers/: alerts.py  forecast.py  health.py  locations.py  observations.py
backend/migrations/: env.py
backend/migrations/versions/: 13ed1f1d363b_add_model_predictions_and_evaluation_.py  25e9d418c909_add_alert_tables.py  31c1b60d2917_initial_schema.py  77ab3e4b46f1_add_training_labels.py
backend/scripts/: check_alerts.py  daily_pipeline.py  evaluate_baselines.py  evaluate_live.py  features.py  generate_labels.py  generate_predictions.py  hourly_pipeline.py  ingest_forecasts.py  ingest_live_forecast.py  ingest_observations.py  retrain_models.py  seed_locations.py  train_model.py  train_snowfall_model.py
backend/tests/: conftest.py  test_alerts.py  test_forecast.py  test_health.py  test_locations.py  test_observations.py
backend/tests/integration/: test_db.py  test_prediction_e2e.py
backend/tests/unit/: test_config.py  test_features.py  test_models.py  test_prediction.py
docs/: realtime-pipeline-plan.md  roadmap.md
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Header.tsx  (+11 more)
(+4 files in other folders)
